--- a/devicetree/BB-ENC28J60-00A0.dts
+++ b/devicetree/BB-ENC28J60-00A0.dts
@@ -5,7 +5,7 @@
 compatible = "ti,beaglebone", "ti,beaglebone-black";
 
 /* identification */
-part-number = "ADAFRUIT-SPI1";
+part-number = "BB-ENC28J60";
 
 /* version */
 version = "00A0";
