--- a/devicetree/BB-ENC28J60-00A0.dts
+++ b/devicetree/BB-ENC28J60-00A0.dts
@@ -13,10 +13,14 @@ version = "00A0";
 /* state the resources this cape uses */
 exclusive-use =
   /* the pin header uses */
-  "P9.31",
+  "P9.24",
+  "P9.25",
+  "P9.26",
+  "P9.27",
+  "P9.28",
   "P9.29",
   "P9.30",
-  "P9.28",
+  "P9.31",
   "spi1";
 
 fragment@0 {
@@ -24,10 +28,14 @@ fragment@0 {
   __overlay__ {
     pinctrl_spi1: pinctrl_spi1_pins {
     pinctrl-single,pins = <                                        
-      0x190 0x33    /* P9_31 = mcasp0_aclkx.spi1_sclk, INPUT_PULLUP  | MODE3 */
-      0x194 0x33    /* P9_29 = mcasp0_fsx.spi1_d0,     INPUT_PULLUP  | MODE3 */
-      0x198 0x13    /* P9_30 = mcasp0_axr0.spi1_d1,    OUTPUT_PULLUP | MODE3 */
-      0x19c 0x13    /* P9_28 = mcasp0_ahclkr.spi1_cs0, OUTPUT_PULLUP | MODE3 */                    
+      0x184 0x37  /* P9_24 RST       | IN_PULLUP     | MODE7 */
+      0x1ac 0x37  /* P9_25 INT       | IN_PULLUP     | MODE7 */
+      0x180 0x37  /* P9_26 WOL       | IN_PULLUP     | MODE7 */
+      0x1a4 0x37  /* P9_27 CLKOUT    | IN_PULLUP     | MODE7 */
+      0x19c 0x13  /* P9_28 SPI1_CS   | OUTPUT_PULLUP | MODE3 */
+      0x194 0x33  /* P9_29 SPI1_D0   | INPUT_PULLUP  | MODE3 */
+      0x198 0x13  /* P9_30 SPI1_D1   | OUTPUT_PULLUP | MODE3 */
+      0x190 0x3B  /* P9_31 SPI1_SCLK | INPUT_PULLUP  | MODE3 */
       >;
     };
   };
@@ -46,7 +54,7 @@ fragment@1 {
          compatible         = "microchip,enc28j60";
          reg                = <0>;
          interrupt-parent   = <&gpio2>;
-         interrupts         = <29>;
+         interrupts         = <25>;
          spi-max-frequency  = <20000000>;
        };
        spidev@1{
